# codex-mcp-telegram

./: .gitignore  AGENTS.md  README.md  example.env  pyproject.toml  requirements.txt  run_server.py  setup.sh
.codex/: config.json  mcp.json
codex_mcp_server/: __init__.py  codex_executor.py  codex_monitor.py  config.py  server.py  telegram_bot.py  telegram_bridge.py  telegram_store.py  telegram_tools.py
project_prompts/: codex_system_prompt.txt
scripts/: telegram_notify_test.py
